# semantic-tableaux

./: README  logic.cabal  tableau.cabal
examples/: ex1.formula  ex2.formula
src/: Expr.hs  Lexer.hs  Main.hs  Parser.hs  Tableau.hs
